# derton-finance

./: .gitignore  CLAUDE.md  CSS_TRANSFORMATION_ANALYSIS.md  alias-retirement-report.md  audit_script.js  breakpoint-inventory.md  deploy.sh  phase1-verification.md  phase2-deliverables.md  workstation-analysis.md
Server/: .dockerignore  .env  .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  backfill_breeze.py  backfill_candles.py  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  universe_top200.txt
Server/alembic/: env.py
Server/app/: clickhouse.py  config.py  database.py  main.py  minio_client.py
Server/app/api/: deps.py  ws.py
Server/app/core/: cache.py  exceptions.py  logging.py  security.py
Server/app/models/: __init__.py  alert.py  audit.py  broker.py  company_master.py  flag.py  instrument.py  nse_eod.py  portfolio.py  session.py  user.py  watchlist.py
Server/app/schemas/: admin.py  alert.py  auth.py  broker.py  flag.py  health.py  instrument.py  market.py  portfolio.py  watchlist.py
Server/app/services/: admin_service.py  alert_rule_service.py  alert_service.py  auth_service.py  commodities_service.py  company_insight_service.py  company_master_service.py  company_reference.py  flag_service.py  instrument_service.py  market_runtime.py  (+8 more)
Server/frontend_dist/: index.html  mock-dashboard.html
Server/ml/: features.py
Server/tests/: conftest.py  test_config.py  test_portfolio.py  test_security.py  test_session.py  test_tick_buffer.py
intelligence-platform/: .env.example  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
intelligence-platform/api/: main.py
intelligence-platform/redis/: REDIS_ARCHITECTURE.md
intelligence-platform/scripts/: gen_proto.sh
intelligence-platform/workers/: celery_app.py
(+293 files in other folders)
