[project]
name = "derton-finance-server"
version = "0.1.0"
description = "Backend service for the Derton Finance analysis terminal"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic-extra-types>=2.10.0",
    "clickhouse-driver>=0.2.8",
    "boto3>=1.36.0",
    "redis>=5.2.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.18",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "protobuf>=5.28.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
