[project]
name = "derton-intelligence"
version = "0.1.0"
description = "AI market-intelligence data platform for Indian equities (ClickHouse + Redis + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "clickhouse-connect>=0.7",
    "redis>=5.0",
    "websockets>=12.0",
    "celery>=5.4",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "boto3>=1.34",
]

[project.optional-dependencies]
transformer = ["torch>=2.3", "einops>=0.8"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
